# Plataforma-Aut

./: .env.example  .gitignore  DEPLOY.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: .vercelignore  alembic.ini  pyproject.toml  requirements.txt
apps/api/api/: index.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260714_1515_schema_inicial.py
apps/api/src/: main.py
apps/api/src/application/: ports.py
apps/api/src/application/catalog/: admin_use_cases.py  use_cases.py
apps/api/src/application/identity/: use_cases.py
apps/api/src/application/scheduling/: use_cases.py
apps/api/src/core/: config.py  database.py  exceptions.py  security.py  tokens.py
apps/api/src/domain/catalog/: entities.py  enums.py  repositories.py  value_objects.py  write_models.py
apps/api/src/domain/identity/: entities.py  enums.py  repositories.py
apps/api/src/domain/scheduling/: entities.py  enums.py  repositories.py  value_objects.py
apps/api/src/infrastructure/database/: seed.py
apps/api/src/infrastructure/database/models/: __init__.py  base.py  catalog.py  dealership.py  identity.py  scheduling.py
apps/api/src/infrastructure/database/repositories/: appointment_repository.py  user_repository.py  vehicle_admin_repository.py  vehicle_repository.py
apps/api/src/infrastructure/email/: senders.py
apps/api/src/infrastructure/ratelimit/: upstash.py
apps/api/src/infrastructure/revalidation/: next_revalidation.py
apps/api/src/infrastructure/storage/: supabase_storage.py
apps/api/src/presentation/: errors.py  security_headers.py
apps/api/src/presentation/v1/: deps.py  rate_limit.py  router.py
apps/api/src/presentation/v1/routes/: admin.py  appointments.py  auth.py  health.py  vehicles.py
apps/api/src/presentation/v1/schemas/: admin_vehicle.py  appointment.py  auth.py  vehicle.py
apps/api/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_health.py  test_persistence.py  test_security.py  test_vehicles_api.py
apps/web/: .prettierrc.json  next.config.ts  package.json  playwright.config.ts
apps/web/e2e/: fluxo-completo.spec.ts
apps/web/public/: CREDITOS.txt
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
apps/web/src/app/(admin)/: layout.tsx
apps/web/src/app/(admin)/admin/: layout.tsx  page.tsx
apps/web/src/app/(public)/: layout.tsx  page.tsx
apps/web/src/app/(public)/contato/: page.tsx
apps/web/src/app/(public)/sobre/: page.tsx
apps/web/src/components/layout/: footer.tsx  navbar.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  field.tsx
apps/web/src/features/appointments/: appointment-modal.tsx
apps/web/src/features/auth/: auth-provider.tsx
apps/web/src/features/home/: hero.tsx
apps/web/src/features/vehicles/: gallery.tsx  image-uploader.tsx  search-filters.tsx  vehicle-actions.tsx  vehicle-card.tsx  vehicle-form.tsx
apps/web/src/lib/: api.ts  format.ts  http.ts  labels.ts  utils.ts
apps/web/src/types/: api.ts
scripts/: README.md  recortar-carro.swift
(+8 files in other folders)
